<resources>
    <string name="app_name">Forrest Assistant</string>
    <string name="ip_hint_editText">Введите ip-адрес</string>
    <string name="connect_button">Подключиться</string>
    <string name="disconnect_button">Отключиться</string>
    <string name="connectMsg_button">Подкл.</string>
    <string name="disconnectMsg_button">Откл.</string>
    <string name="message_editText">Введите сообщение</string>
    <string name="message_button">Отправить</string>
    <string name="item_menu_call">Звонок</string>
    <string name="item_menu_message">Сообщение</string>
    <string name="registration">Регистрация</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="users_online">Контакты</string>
    <string name="map">Карта</string>
    <string name="info">Информация</string>

    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="app_name_ru">Лесной помощник</string>
    <string name="incoming_call">Входящий вызов...</string>
    <string name="subscriber_info">Об абоненте</string>
    <string name="map_title">Карта</string>
</resources>