<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtxIpAddressMessage"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/ip_hint_editText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnConnectSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/green"
            android:text="@string/connectMsg_button"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_messages"
        android:layout_weight="1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtxMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_editText"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/message_button"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>